# SinglePhase

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  compile_commands.json
src/: CMakeLists.txt  Calculator_Tutorial-2.cpp  GPU.cpp  GPU.hpp  In_house_cg.cpp  PSD.cpp  Pct.cpp  Script.cpp  Solver_openmp.cpp  Solver_openmp.cu  Solver_openmp_ad copy.cpp  Solver_openmp_ad.cpp  Solver_openmp_ad_No_preci.cpp  Solver_openmp_test.cpp  Sw.cpp  average_micro.cpp  bicgstab.hpp  bicgstab_API.cpp  bicgstab_example.cpp  cg.hpp  cg_API.cpp  cg_example.cpp  compressible.cpp  compressible_openmp.cpp  compressible_openmp_ad.cpp  compressible_openmp_ad_all.cpp  compressible_openmp_ad_bulk_no_w.cpp  conjugateGradient.cpp  conjugateGradientPrecond.cpp  cuSolverSp_LinearSolver.cpp  debug.cpp  dfgmr.c  ditersol.c  equation_solve.cpp  for_online_server.cpp  for_southwest_hybrid.cpp  iccg_solver.h  main.cu  mmio.c  mmio_wrapper.cpp  (+12 more)
src_new/: CoordinationNumber.cpp  CoordinationNumber.hpp  GasMatrixConfig.hpp  GasPhysicsModel.cpp  GasPhysicsModel.hpp  Globals.cpp  Globals.hpp  Initial_condition.cpp  Initial_condition.hpp  JacobianAssembler.cpp  JacobianAssembler.hpp  JacobianAssembler_LinearEquation.cpp  JacobianAssembler_LinearEquation.hpp  JacobianAssembler_LiquidMatrixConfig_2Transport_Dirichlet.cpp  JacobianAssembler_LiquidMatrixConfig_2Transport_Neumann.cpp  JacobianAssembler_LiquidMatrixConfig_PressureOnly.cpp  JacobianAssembler_LiquidMatrixConfig_PressureOnly_Neumann.cpp  JacobianAssembler_NonLinearEquation.cpp  JacobianAssembler_NonLinearEquation.hpp  LiquidMatrixConfig.hpp  LiquidPhysicsModel.cpp  LiquidPhysicsModel.hpp  Memory.cpp  Memory.hpp  MeshInput.cpp  MeshInput.hpp  PNMsolver.cpp  PNMsolver.hpp  ParametersIni.cpp  ParametersIni.hpp  Physic_property_cal.cpp  Physic_property_cal.hpp  PhysicsModel.hpp  SelfDefinedFunctions.cpp  SelfDefinedFunctions.hpp  SystemMatrixConfig.hpp
